# gum_health

./: .gitignore  HealthSync.command  README.md  config.example.json  pyproject.toml
docs/: health_observer_api_mapping.md
examples/: README.md  daily_aggregation.md  full_reference.json  full_reference.md  observations.jsonl  observations.md  raw_records.jsonl
oura-webhook-integration/: .env.example  README.md  index.html  package-lock.json  package.json
oura-webhook-integration/api/: health.js
oura-webhook-integration/api/debug/: backfill-observations.js  compact-observations.js  counts.js  db.js  relabel-default-user.js  user-summary.js  users.js
oura-webhook-integration/api/oura/: webhook.js
oura-webhook-integration/api/oura/oauth/: callback.js  start.js
oura-webhook-integration/lib/: db.js  env.js  oura.js  ouraTransform.js
src/health_observer/: __init__.py  collection.py  daily_aggregation.py  oauth_callback.py  oauth_client.py  observation_log.py  observer.py  paths.py  schema.py  source_policy.py  state.py
src/health_observer/providers/: formatting.py
src/health_observer/providers/apple/: shortcut.py  transform.py
src/health_observer/providers/oura/: api.py  auth.py  callback.py  transform.py
src/health_observer/rubric/: __init__.py  base_reference.json
src/health_observer/runtime/: mac.py
tests/: test_collection.py  test_daily_aggregation.py  test_formatting.py  test_observation_contract.py  test_observation_log.py  test_oura_transform.py  test_rubric.py  test_schema.py  test_whoop_api.py  test_whoop_auth.py  test_whoop_transform.py
(+3 files in other folders)
